# time-series-forecaster

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
conf/: config.yaml
data/interim/: df_test.parquet  df_train.parquet
data/processed/: df_test_X.parquet  df_train.parquet
docs/: README.md
models/components/: 1.html  10.html  11.html  12.html  13.html  14.html  3.html  7.html  8.html  9.html
models/graphs/: 1.html  10.html  11.html  12.html  13.html  14.html  3.html  7.html  8.html  9.html
models/results/: forecasts.csv  tuning_results.csv  tunings_results.csv
models/results/base/: forecasts.csv  tuning_results.csv
models/results/promo/: forecasts.csv  tunings_results_promo.csv
models/results/promo+holiday/: forecasts.csv  tunings_results_promo_holiday.csv
models/saved_models/: 1.pkl  10.pkl  3.pkl  7.pkl  8.pkl  9.pkl
notebooks/exploratory/: 1. EDA.html  1. EDA.ipynb  1. Eda & Preprocessing.ipynb  2. Modeling.ipynb
reports/figures/: 1.html  10.html  3.html  7.html  8.html  9.html
src/config/: config.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: df_test.csv  df_train.csv  predict_model.py  train_model.py
test/: test.py
