[tool.poetry]
name = "time-series-forecaster"
version = "0.1.0"
description = "A library to showcase time series analysis and forecasting"
authors = ["Deniz Nuhoglu <dnuhoglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
