[tool.poetry]
name = "time-series-forecaster"
version = "0.1.0"
description = "A library to showcase time series analysis and forecasting"
authors = ["Deniz Nuhoglu <dnuhoglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.19.0"
nbformat = "^5.9.2"
sktime = "^0.26.0"
prophet = "^1.1.5"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
