[tool.poetry]
name = "time-series-forecaster"
version = "0.1.0"
description = "A library to showcase time series analysis and forecasting"
authors = ["Deniz Nuhoglu <dnuhoglu@gmail.com>"]
packages = [{include = "*", from="src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
nbformat = "^5.9.2"
prophet = "^1.1.5"
pyarrow = "^15.0.0"
pandas = "2.1.4"
scikit-learn = "^1.4.1.post1"
pydantic = "^2.6.3"
pyyaml = "^6.0.1"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
